TOPS-1022 - make sidekiq and trinidad service scripts more similar  - add logging running of sidekiq start/stop actions  - add umask setting to service scripts so maven downloads can be deleted.